Adding PinCatcher.  Need to test it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(ARDUINO_PLATFORM uno)
 find_package(Arduino REQUIRED EEPROM Wire)
 
 include_directories(${ARDUINO_INCLUDE_DIR})
-include_directories(./libraries/DS1307  ./libraries/PCATTACH  ./libraries/Wiegand26)
+include_directories(./libraries/DS1307  ./libraries/PinCatcher  ./libraries/Wiegand26)
 file(GLOB_RECURSE cpp_ Open_Access_Control/*.cpp ./libraries/*.cpp)
 add_executable(${target_name} ${cpp_})
 target_link_libraries(${target_name}
